--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 {% load staticfiles %} <!-- New line -->
 <html>
-
 	<head>
 		<title>Tatu</title>
+		
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
+		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %} ">
+
 	</head>
 	
 	<body>
-		<h1>Home page</h1>
-		<div>
-			hey there partner! <br />
-			<strong>{{ boldmessage }}</strong><br />
-		</div>
 		
-		<div>
+		<div class="container" >
+		<h1>Home page</h1>
+			This is the real deal! <br />
+			<strong>{{ boldmessage }}</strong><br />
 			<br/> <a href='/tatu/contact-us/'>Contact us</a>
 			<br/> <a href='/tatu/FAQ/'>FAQ page</a>
 			<br/> <a href='/tatu/register/'>Register page</a>
 			<br/> <a href='/tatu/login/'>Login page</a>
 			<br/> <a href='/tatu/artists/'>Artists page</a>
 			<br/> <a href='/tatu/tattoos/'>Tattoos page</a>
+			<div>
+			
 			
 		</div>
+		</div>
+		
+		
 	</body>
 	
 </html>
