--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -15,23 +15,29 @@
 	</head>
 	
 	<body>
+	<center><div class="container"><span><img src="{% static "images/logo.png" %} " alt="logo"></span></div></center>
 
-		<div class="container" >
-		<h1>Home page</h1>
-			This is the real deal! <br />
 
-			<br/> <a href='/tatu/contact-us/'>Contact us</a>
-			<br/> <a href='/tatu/FAQ/'>FAQ page</a>
-			<br/> <a href='/tatu/register/'>Register page</a>
-			<br/> <a href='/tatu/login/'>Login page</a>
-			<br/> <a href='/tatu/artists/'>Artists page</a>
-			<br/> <a href='/tatu/tattoos/'>Tattoos page</a>
-			<div>
-			
-			
-		</div>
-		</div>
-		
+    <div class="container">
+        <div class="topbox"><text>TOP OF THE DAY</text></div>
+
+
+
+    </div>
+    
+
+    <center><div class="botline">
+
+		<ul class="list-inline">
+			<li> <a href='/tatu/contact-us/'>Contact us</a></li>
+			<li> <a href='/tatu/FAQ/'>FAQ </a></li>
+			<li> <a href='/tatu/register/'>Register </a></li>
+			<li> <a href='/tatu/login/'>Login </a></li>
+			<li> <a href='/tatu/artists/'>Artists </a></li>
+			<li> <a href='/tatu/tattoos/'>Tattoos </a></li>
+
+		</ul>
+	</div></center>
 		
 	</body>
 	
