having trouble with media files :(

--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -19,12 +19,12 @@
 
 
     <div class="container">
-        <div class="topbox"><text>TOP OF THE DAY</text></div>
+        <div class="topbox">TOP OF THE DAY</div>
 
 
 
-    </div>
-    
+
+
 
     <center><div class="botline">
 
