made resolutions nice

--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -19,14 +19,14 @@
 
 
     <div class="container">
-        <div class="topbox">TOP OF THE DAY</div>
+        <div class="topbox">TOP OF THE DAY</div></div>
 
 
 
 
 
 
-    <center><div class="botline">
+	<center> <div class="botline">
 
 		<ul class="list-inline">
 			<li> <a href='/tatu/contact-us/'>Contact us</a></li>
