--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,7 @@
 html { background: transparent; }
 body {
+    padding: 0;
+    margin: 0;
     background-color: white;
     background-image:
     linear-gradient(
@@ -19,10 +21,18 @@ span {
 img {
     width: 80%;
 }
+div{
+    height: auto; /*if more info comes on the page, it will stretch down*/
+    width: 1000px;
+    margin: 0 auto; /*this will cause the div to be in the center*/
+}
 div.botline{
     position: relative;
 
     top: 550px;
+
+
+
 
 }
 div.topbox{
