small changes to frequently asked questions

--- a/templates/tatu/contact.html
+++ b/templates/tatu/contact.html
@@ -20,7 +20,7 @@
 
 	<div class="midbox">
 		
-			<h3>WAD2 Team 8</h3><br />
+			<h3>WAD2 Team A </h3><br />
 			Level 7, Boyd Orr Building, University of Glasgow<br />
 			175 University Avenue, Glasgow G12 8PW<br />
 			Email: 2232817m@student.gla.ac.uk <br />
