link to frequently asked questions works now

--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -22,7 +22,7 @@
 		<ul class="list-inline">
             <li> <a href='/tatu/login/'>Login </a></li>
             <li> <a href='/tatu/register/'>Register </a></li>
-            <li> <a href='/tatu/FAQ/'>FAQ </a></li>
+            <li> <a href='/tatu/faq/'>FAQ </a></li>
 
             <li> <a href='/tatu/artists/'>Artists </a></li>
             <li> <a href='/tatu/tattoos/'>Tattoos </a></li>
