--- a/templates/tatu/faq.html
+++ b/templates/tatu/faq.html
@@ -40,7 +40,7 @@
 			<li> | </li>
 			<li> <a href='/tatu/contact-us/'>Contact us</a></li>
 			<li> | </li>
-			<li> <a href='/tatu/FAQ/'>FAQ </a></li>
+			<li> <a href='/tatu/faq/'>FAQ </a></li>
 			<li> | </li>
 			<li> <a href='/tatu/register/'>Register </a></li>
 			<li> | </li>
