--- a/templates/tatu/upload.html
+++ b/templates/tatu/upload.html
@@ -1,12 +1,27 @@
 {% load staticfiles %}
+
+{% if post_form.errors %}
+    {% for field in post_form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in post_form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
 <div>
 
         <form id="post_form" method="post" action="{% url 'upload' %}"
               enctype="multipart/form-data">
         {% csrf_token %}
 
-        {{ post_form.as_p }}
+            {{ post_form.as_p }}
 
-        <input type="submit" name="submit" value="Register" />
+        <input type="submit" name="submit" value="Upload" />
         </form>
 </div>
