--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,44 +1,55 @@
-html { background: transparent; }
-body {
-    padding: 0;
-    margin: 0;
-    background-color: white;
-    background-image:
-    linear-gradient(
-            to right,
-            #02060a,
-            #02060a 50%,
-            #dfe0e4 15%,
-            #dfe0e4 85%,
-            #dfe0e4 85%
-    );
+html,body {
+    background-image:  url("background_wad.png");
+
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-}}
-
-
-div {
-    height: auto; /*if more info comes on the page, it will stretch down*/
+    background-position: bottom;
+    height: 100%;
     width: 100%;
-    margin: 0 auto; /*this will cause the div to be in the center*/
-}
-div.logo{
-    position: absolute;
-
-    width: auto;
-    top: 35%;
-    left: 15%
-
+    margin: 0;
+    padding: 0;
 
 
 }
-div.logotxt{
-    position: absolute;
-    width: 40%;
-    height: auto%;
-    color: #02060a;
-    right: 5%;
-    top: 22%
 
 
+.navi{
+    position: fixed;
+    background: transparent;
+    display: inline;
+    font-family: Arial;
+    font-size: 20px;
+    font-size: 2vw;
+    text-align: center;
+    text-transform: uppercase;
+    bottom: 100px;
+    width: 100%;
+
+
+
+}
+a:link {
+     color: #c13399;
+     text-decoration: none;
  }
+
+
+/* visited link */
+a:visited {
+    color: #c13399;
+    text-decoration: none;
+}
+
+
+/* mouse over link */
+a:hover {
+    color: #c13399;
+    text-decoration: none;
+}
+
+
+/* selected link */
+a:active {
+    color: #c13399;
+    text-decoration: none;
+}
