small chnages+login and out now work

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 html,body {
-    background-image:  url("background_wad.png");
+    background-image:  url("home.png");
 
     background-size: cover;
     background-repeat: no-repeat;
