--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load staticfiles %} <!-- New line -->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tatu</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/style2.css" %}">
+
 </head>
 <body>
 
