--- a/templates/tatu/register.html
+++ b/templates/tatu/register.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<div>
+{% load staticfiles %} <!-- New line -->
+<html>
+<head>
+    <title>Tatu</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/style3.css" %}">
+
+</head>
+
+<body>
+<div class="navi">
     {% if registered %}
-        Rango says: <strong>thank you for registering!</strong>
-        <a href="{% url 'index' %}">Return to the homepage</a><br />
+        <div class="reg">thank you for registering!
+        <a href="{% url 'index' %}">Return to the homepage</a><br /></div>
     {% else %}
-        Rango says: <strong>register here!</strong><br />
+        <div class="noreg">
         <form id="user_form" method="post" action="{% url 'register' %}"
               enctype="multipart/form-data">
         {% csrf_token %}
@@ -13,6 +28,8 @@
         {{ profile_form.as_p }}
 
         <input type="submit" name="submit" value="Register" />
-        </form>
+        </form><div>
     {% endif %}
 </div>
+</body>
+</html>
