--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -12,17 +12,28 @@ html,body {
 
 }
 .navi{
-    background-color: red;
+
+
+    width: 655px;
     font-family: Arial;
     font-size: 13px;
     font-size: 1vw;
-    text-align: left;
+    display: block;
+
+    margin-left: auto;
+    margin-right: auto;
     text-transform: uppercase;
     color: #c13399;
+    text-align: center;
+
 }
-.reg{
-    background-color: blue;
-}
-.noreg{
-    background-color: blue;
+.low{
+    text-align: center;
+    font-size: 0.5vw;
+    width: 300px;
+    height: auto;
+    text-transform: lowercase;
+    margin-left: auto;
+    margin-right: auto;
+
 }
