--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -1,13 +1,42 @@
 html,body {
-    background-image:  url("other.png");
+    background-color: #f1f1f1;
 
     background-size: cover;
-    background-repeat: no-repeat;
+
     background-position: bottom;
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
+}
+.myzone{
+
+    width: 650px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
 
 
 }
+.name{
+    font-size: 2vw;
+    font-family: Arial;
+}
+.name2{
+    font-size: 1vw;
+    font-family: Arial;
+}
+.img-circle {
+    border-radius: 50%;
+}
+.box {
+    position: absolute;
+
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-wrap: normal;
+
+}
+
+
