--- a/templates/tatu/watercolour.html
+++ b/templates/tatu/watercolour.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %} <!-- New line -->
 <html lang="en">
 <head>
     <title>Tatu</title>
@@ -8,59 +9,61 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/style2.css" %}">
+
+
 
 
 </head>
 
 <body>
-{% for c in coms %}
-c
-{% endfor %}
-{% for i in img %}
-    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="300px" height="300px">
+
+
+<div class="box"> {% for i in img %}
+
+    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
     <!-- Trigger the modal with a button -->
-    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}">Open Modal </button>
 
-<!-- Modal -->
-<div id="myModal{{i.id}}" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <!-- Modal -->
+    <div id="myModal{{i.id}}" class="modal fade" role="dialog">
+        <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <img  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpg"}}" alt="fuc" width="90"height="90">
-                {{i.description}}
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <div class="col-sm-3"><img class="img-circle"  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpg"}}" alt="fuc" width="90"height="90">
+                    </div>
+                    <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
+                        <div class="row"> {{i.description}}</div>
+                    </div>
 
 
 
+                </div>
+                <div class="modal-body">
+                    <div class="name2">Comments </div>
+                    {% for com in i.coms %}
+                    <p>{{com.poster}} says : {{com.text}}</p><br>
+
+
+                    {% endfor %}
+
+                </div>
+                <div class="modal-footer">
+                    <p>Likes : {{i.likes}}</p>
+
+                </div>
             </div>
-            <div class="modal-body">
-                {% for com in i.coms %}
-               <li> {{com.text}}</li>
 
-
-                {% endfor %}
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
         </div>
-
     </div>
+
+    {% endfor %}
+
 </div>
-
-{% endfor %}
-
-
-
-
-
-
 
 
 
 </body>
 </html>
-
