--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -25,7 +25,7 @@
 <br>
 <div class="box"> {% for i in imgs %}
 
-    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
+    <img  src="{{ MEDIA_URL }}{{ i.avatar }}" alt="profile picture" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
     <!-- Trigger the modal with a button -->
 
     <!-- Modal -->
