--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -25,7 +25,7 @@
 <br>
 <div class="box"> {% for i in imgs %}
 
-    <img  src="{{ MEDIA_URL }}{{ i.avatar }}" alt="profile picture" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
+    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="uploads" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
     <!-- Trigger the modal with a button -->
 
     <!-- Modal -->
@@ -36,7 +36,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <div class="col-sm-3"><img class="img-circle"  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpg"}}" alt="fuc" width="90"height="90">
+                    <div class="col-sm-3"><img class="img-circle"  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpg"}}" alt="profile_picture" width="90"height="90">
                     </div>
                     <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
                         <div class="row"> {{i.description}}</div>
