--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -36,7 +36,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <div class="col-sm-3"><img class="img-circle"  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpg"}}" alt="profile_picture" width="90"height="90">
+                    <div class="col-sm-3"><img class="img-circle"  src="{{ MEDIA_URL }}{{ i.author }}{{"/avatar/profile.jpeg"}}" alt="profile_picture" width="90"height="90">
                     </div>
                     <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
                         <div class="row"> {{i.description}}</div>
