chaged image ratios

--- a/templates/tatu/base.html
+++ b/templates/tatu/base.html
@@ -21,7 +21,7 @@
 
 <div class="box"> {% for i in img %}
 
-    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="600px" height="600px" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
+    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="33%" height="33%" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
     <!-- Trigger the modal with a button -->
 
     <!-- Modal -->
