--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -35,8 +35,39 @@ html,body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    overflow-wrap: normal;
+
 
 }
 
+.back-box
+{
+    position: absolute;
+    font-family: Arial;
+    font-size: 100%;
+}
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+
+/* visited link */
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+
+/* mouse over link */
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+
+/* selected link */
+a:active {
+    color: black;
+    text-decoration: none;
+}
 
