--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -18,7 +18,8 @@
 
 <body>
 
-
+<div class="back-box"><a href='/tatu/tattoos/'>.back to categories  </a></div>
+<br>
 <div class="box"> {% for i in img %}
 
     <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="33%" height="auto" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
