Overhaul views and categories

--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -57,7 +57,7 @@
 
                         {{ comment_form.as_p }}
 
-                        <input type="submit" name="cat{{ i.id }}" value="Submit" />
+                        <input type="submit" name="Submit" value="Submit" />
                     </form></p>
                     <p>Likes : {{i.likes}}</p>
 
