--- a/templates/tatu/tattoos.html
+++ b/templates/tatu/tattoos.html
@@ -17,15 +17,15 @@
 <body>
 <div class="navi">
 
-    <a href='/tatu/tattoos/watercolour'>watercolour | </a>
-    <a href='/tatu/tattoos/traditional'>traditional | </a>
-    <a href='/tatu/tattoos/realism'>realism | </a>
-    <a href='/tatu/tattoos/tribal'>tribal | </a>
-    <a href='/tatu/tattoos/dotwork'>dotwork | </a>
-    <a href='/tatu/tattoos/geometric'>geometric | </a>
-    <a href='/tatu/tattoos/japanese'>japanese | </a>
-    <a href='/tatu/tattoos/lettering'>lettering | </a>
-    <a href='/tatu/tattoos/blackwork'>blackwork </a>
+    <a href='/tatu/watercolour'>watercolour | </a>
+    <a href='/tatu/traditional'>traditional | </a>
+    <a href='/tatu/realism'>realism | </a>
+    <a href='/tatu/tribal'>tribal | </a>
+    <a href='/tatu/dotwork'>dotwork | </a>
+    <a href='/tatu/geometric'>geometric | </a>
+    <a href='/tatu/japanese'>japanese | </a>
+    <a href='/tatu/lettering'>lettering | </a>
+    <a href='/tatu/blackwork'>blackwork </a>
 
 
 </div>
