--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -23,7 +23,7 @@
             <a href='/tatu/register/'>Register | </a>
             {% endif %}
 
-            <a href='/tatu/tattoos/'>Tattoos | </a>
+            <a href='/tatu/navigate/'>Tattoos | </a>
             <a href='/tatu/contact-us/'>Contact us</a>
 
         </div>
