--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -47,8 +47,6 @@
 					<ul id="talk">
 						{% for com in i.coms %}
 							<p>{{com.poster}} says : {{com.text}}</p><br>
-
-
 						{% endfor %}
 					</ul>
                 </div>
@@ -58,7 +56,7 @@
 
                         {{ comment_form.as_p }}
 
-                        <input type="submit" name="Submit" value="Submit" />
+                        <input type="submit" name="{{i.id}}" value="Submit">
                     </form></p>
                     <p>Likes : {{i.likes}}</p>
 
@@ -76,6 +74,5 @@
 
 
 </body>
-<script type="text/javascript" src="../../../static/js/main.js"></script>
 
 </html>
