--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -33,7 +33,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <div class="col-sm-3"><img class="img-circle"  src="{{ i.author.userprofile.avatar.url }}" alt="fuc" width="90"height="90">
+                    <div class="col-sm-3"><a href='{% url 'profile' i.author.id %}'><img class="img-circle"  src="{{ i.author.userprofile.avatar.url }}" alt="fuc" width="90"height="90"></a>
                     </div>
                     <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
                         <div class="row"> {{i.description}}</div>
@@ -46,7 +46,7 @@
                     <div class="name2">Comments </div>
 					<ul id="talk">
 						{% for com in i.coms %}
-							<p>{{com.poster}} says : {{com.text}}</p><br>
+							<p><a href='{% url 'profile' com.poster.id %}'><img class="img-circle"  src="{{ com.poster.avatar.url }}" alt="fuc" width="30"height="30"></a>{{com.poster}} says : {{com.text}}</p><br>
 						{% endfor %}
 					</ul>
                 </div>
@@ -73,6 +73,26 @@
     {% endfor %}
 
 </div>
+
+
+<div>
+    
+{% if current.id != userid %}
+    {% if other in favs %}
+        <p>You've favourited this person!!</p>
+    {% else %}
+        <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="submit" class="btn" value="Favourite!" name="fav">
+        </form>
+    {% endif %}
+{% else %}
+    {% for fav in favs %}
+        <li><a href='{% url 'profile' fav.id %}'>{{ fav.username }}</a></li>
+    {% endfor %}
+{% endif %}
+</div>
+
 
 
 
