specified encoding, fixing python anywhere problem

--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<div class="back-box"><a href='/tatu/tattoos/'>.back to categories  </a></div>
+<div class="back-box"><a href='/tatu/navigate/'> back to categories  </a></div>
 <br>
 <div class="box"> {% for i in img %}
 
