--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -15,25 +15,120 @@
 
 
 <body>
+<div class="top_zone">
+    <div class="col-sm-3"><img class="img-circle"  src="{{profile.userprofile.avatar.url}}" alt="fuc" width="100px"height="100px"></a></div>
+    <div class="col-sm-1">
+        <div class="row">{{profile}}</div>
+        {% if current.id == userid %}
+        <div class="row">
 
-<div>
-    {% if current.id != userid %}
+            <a href='/tatu/upload/'>upload  </a>
+
+        </div>
+        {% endif %}
+
+        <div class="row">{% if current.id != userid %}
 
     {% if other in favs %}
-        <p>You've favourited this person!!</p>
+    <p>You've favourited this person!!</p>
     {% else %}
-        <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="submit" class="btn" value="Favourite!" name="fav">
-        </form>
+    </form>
     {% endif %}
-{% else %}
-    {% for fav in favs %}
-        <li><a href='{% url 'profile' fav.id %}'>{{ fav.username }}</a></li>
-    {% endfor %}
-{% endif %}
+    {% else %}
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"> My favorites</button>
+            <!-- Modal -->
+            <div id="myModal{{i.id}}" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <div class="modal-header">Favorites
+
+
+
+
+                        </div>
+                        <div class="modal-body">
+                            {% for fav in favs %}
+                            <a href='{% url 'profile' fav.id %}'>{{ fav}}</a>
+
+                            {% endfor %}
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+    {% endif %}</div>
+
+        </div>
+    </div>
+    <div class="col-sm-12"><div class="box"> {% for i in img %}
+
+        <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="33%" height="auto" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
+        <!-- Trigger the modal with a button -->
+
+        <!-- Modal -->
+        <div id="myModal{{i.id}}" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <div class="col-sm-3"><a href='{% url 'profile' i.author.id %}'><img class="img-circle"  src="{{ i.author.userprofile.avatar.url }}" alt="fuc" width="90"height="90"></a>
+                        </div>
+                        <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
+                            <div class="row"> {{i.description}}</div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="modal-body">
+                        <div class="name2">Comments </div>
+                        <ul id="talk">
+                            {% for com in i.coms %}
+                            <p><a href='{% url 'profile' com.poster.id %}'><img class="img-circle"  src="{{ com.poster.avatar.url }}" alt="fuc" width="30"height="30"></a>{{com.poster}} says : {{com.text}}</p><br>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <p><form id="comment_form" method="post" action="." enctype="multipart/form-data">
+                        {% csrf_token %}
+
+                        {{ comment_form.as_p }}
+
+                        <input type="submit" name="com{{i.id}}" value="Submit">
+                    </form></p>
+                        <form method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input type="submit" class="btn" value="Like!" name="lke{{i.id}}">
+                        </form>
+                        <p>Likes : {{i.likes}}</p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        {% endfor %}
+
+    </div></div>
 
 </div>
+
+
+
+
+
+
 </body>
 
 </html>
