--- a/templates/tatu/Browse_base.html
+++ b/templates/tatu/Browse_base.html
@@ -22,7 +22,7 @@
 <br>
 <div class="box"> {% for i in img %}
 
-    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="avatar" width="33%" height="auto" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
+    <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="picture" width="33%" height="auto" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
     <!-- Trigger the modal with a button -->
 
     <!-- Modal -->
