--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,7 +1,31 @@
+html,body {
+
+    background-color: #f1f1f1;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+
+}
+
 .img-circle {
     border-radius: 50%;
 }
 
+.top_zone{
+    position: relative;
+    width: 500px;
+    height: 180px;
+    margin-left: auto;
+    margin-right: auto;
+
+
+
+}
 .box {
     position: relative;
 
@@ -10,10 +34,4 @@
     margin-right: auto;
 
 
-}
-.top_zone{
-    position: relative;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
 }
