--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -17,15 +17,15 @@
 <body>
 <div class="top_zone">
     <div class="col-sm-3"><img class="img-circle"  src="{{profile.userprofile.avatar.url}}" alt="fuc" width="100px"height="100px"></a></div>
-    <div class="col-sm-1">
-        <div class="row">{{profile}}</div>
+    <div class="col-sm-5">
+        <div class="row">{{profile}}
         {% if current.id == userid %}
-        <div class="row">
 
-            <a href='/tatu/upload/'>upload  </a>
 
-        </div>
-        {% endif %}
+            |   <a href='/tatu/upload/'>Upload new picture </a>
+
+
+        {% endif %}</div>
 
         <div class="row">{% if current.id != userid %}
 
@@ -67,8 +67,12 @@
     {% endif %}</div>
 
         </div>
+
+
     </div>
-    <div class="col-sm-12"><div class="box"> {% for i in img %}
+</div>
+   <div class="box">
+        {% for i in img %}
 
         <img  src="{{ MEDIA_URL }}{{ i.image }}" alt="fuc" width="33%" height="auto" button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal{{i.id}}"></button>
         <!-- Trigger the modal with a button -->
@@ -83,7 +87,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <div class="col-sm-3"><a href='{% url 'profile' i.author.id %}'><img class="img-circle"  src="{{ i.author.userprofile.avatar.url }}" alt="fuc" width="90"height="90"></a>
                         </div>
-                        <div class="col-sm-4"><div class="row"><div class="name2">{{i.author}} </div></div>
+                        <div class="col-sm-4"><div class="row"></div>
                             <div class="row"> {{i.description}}</div>
                         </div>
 
@@ -94,7 +98,7 @@
                         <div class="name2">Comments </div>
                         <ul id="talk">
                             {% for com in i.coms %}
-                            <p><a href='{% url 'profile' com.poster.id %}'><img class="img-circle"  src="{{ com.poster.avatar.url }}" alt="fuc" width="30"height="30"></a>{{com.poster}} says : {{com.text}}</p><br>
+                            <p><a href='{% url 'profile' com.poster.id %}'><img class="img-circle"  src="{{ com.poster.avatar.url }}" alt="fuc" width="30"height="30"></a> says : {{com.text}}</p><br>
                             {% endfor %}
                         </ul>
                     </div>
@@ -120,9 +124,7 @@
 
         {% endfor %}
 
-    </div></div>
-
-</div>
+    </div>
 
 
 
