--- a/templates/tatu/profile.html
+++ b/templates/tatu/profile.html
@@ -27,6 +27,8 @@
 
         {% endif %}</div>
 
+        <div class="row">{{profile.first_name}}</div>
+        <div class="row"> <a href="{% url 'index' %}">Back to index </a></div>
         <div class="row">{% if current.id != userid %}
 
     {% if other in favs %}
